# calorie-tracker

./: .gitignore  =6.0  README.md  calorie_tracker.bat  installer.py  main.py  pyproject.toml  requirements.txt
.kiro/specs/calorie-tracker/: .config.kiro  design.md  requirements.md  tasks.md
calorie_tracker/: __init__.py  __main__.py  cli.py  food_db.json  gui.py  models.py  storage.py  tracker.py  vision.py
docs/: GIT_COMMANDS.md
scripts/: calorie_tracker.bat  installer.py
tests/: test_cli.py  test_storage.py  test_tracker.py  test_vision.py
