[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "calorie-tracker"
version = "0.1.0"
description = "Модульное Python-приложение для учёта калорий"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
calorie-tracker = "calorie_tracker.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
